Update index.html support char

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
-<html dir="rtl" charset=utf-8>
+<html dir="rtl">
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <head>
     <script>
       function c(list)
